media: Don't remove players from chrome://media-internals on process exit.

As long as chrome://media-internals is open, it should preserve log
entries. Log entries are still removed from the backing store, so these
players will be removed if the page is reloaded.

This CL also changes the trigger for backing store removal to include
tab crashes. Previously there was no reliable way to remove a logs for a
player from a crashed tab, which is problematic if the tab is incognito.

Bug: 741132
Change-Id: I92b152fa6578c3728ab22a45786e188d93fb87f2